--- a/index.html
+++ b/index.html
@@ -19,16 +19,215 @@
     <link href="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@3.0.1/dist/cookieconsent.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <nav class="nav-mobile">
-        <a class="nav-mobile__item" href="#">oferta</a>
-        <a class="nav-mobile__item" href="#">o nas</a>
-        <a class="nav-mobile__item" href="#contact">kontakt</a>
+        <a class="nav-mobile__items" href="#">
+            <div class="nav-mobile__icon">
+                <svg viewBox="-2.4 -2.4 28.80 28.80" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
+                    fill="#1f2d5a" stroke="#1f2d5a">
+                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                    <g id="SVGRepo_iconCarrier">
+                        <defs>
+                            <style>
+                                .cls-1 {
+                                    fill: none;
+                                    stroke: #1f2d5a;
+                                    stroke-miterlimit: 10;
+                                    stroke-width: 0.8399999999999999;
+                                }
+                            </style>
+                        </defs>
+                        <path class="cls-1" d="M7.23,6.25h9.54a2.86,2.86,0,0,1,2.87,2.86A2.81,2.81,0,0,1,18.9,11H10.09">
+                        </path>
+                        <path class="cls-1" d="M10.09,12h9.55a2.87,2.87,0,0,1,0,5.73H10.09"></path>
+                        <circle class="cls-1" cx="10.09" cy="14.89" r="2.86"></circle>
+                        <circle class="cls-1" cx="4.36" cy="14.89" r="2.86"></circle>
+                        <circle class="cls-1" cx="7.23" cy="9.11" r="2.86"></circle>
+                    </g>
+                </svg>
+            </div>
+            <p class="nav-mobile__text">Systemy rur</p>
+        </a>
+        <a class="nav-mobile__items" href="#">
+            <div class="nav-mobile__icon">
+                <svg fill="#1f2d5a" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-49.6 -49.6 595.20 595.20" xml:space="preserve"
+                    stroke="#1f2d5a" transform="rotate(0)" stroke-width="0.004960000000000001">
+                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC"
+                        stroke-width="6.944000000000001"></g>
+                    <g id="SVGRepo_iconCarrier">
+                        <g>
+                            <g>
+                                <g>
+                                    <path
+                                        d="M416,256v56h-69.456c-14.84,0-29.824-5.024-43.624-14.744c-4.336-3.032-6.92-8.312-6.92-14.112V272h40v-48H160v48h40 v11.144c0,5.808-2.584,11.088-7.24,14.336c-13.488,9.496-28.464,14.52-43.304,14.52H80v-56H0v240h80v-56h69.456 c15.168,0,29.832,4.808,42.416,13.88C208.28,465.736,227.696,472,248,472s39.72-6.264,56.136-18.12 c12.584-9.072,27.248-13.88,42.408-13.88H416v56h80V256H416z M64,480H16V272h48V480z M176,256v-16h144v16H176z M416,424h-69.456 c-18.544,0-36.448,5.848-51.776,16.912C281.104,450.784,264.92,456,248,456c-16.92,0-33.104-5.216-46.776-15.088 C185.896,429.848,168,424,149.456,424H80v-96h69.456c18.168,0,36.328-6.032,52.8-17.632c8.6-6.024,13.744-16.2,13.744-27.224V272 h64v11.144c0,11.024,5.144,21.2,14.024,27.416c16.192,11.408,34.36,17.44,52.52,17.44H416V424z M480,480h-48V272h48V480z">
+                                    </path>
+                                    <path
+                                        d="M96,48h128v16h-16v72h16v32h-64v48h176v-48h-64v-32h16V64h-16V48h128c13.232,0,24-10.768,24-24S413.232,0,400,0H96 C82.768,0,72,10.768,72,24S82.768,48,96,48z M320,184v16H176v-16H320z M240,168v-32h16v32H240z M272,120h-48V80h48V120z M240,64 V48h16v16H240z M96,16h304c4.416,0,8,3.592,8,8s-3.584,8-8,8H96c-4.416,0-8-3.592-8-8S91.584,16,96,16z">
+                                    </path>
+                                    <rect x="448" y="288" width="16" height="16"></rect>
+                                    <rect x="448" y="368" width="16" height="16"></rect>
+                                    <rect x="448" y="448" width="16" height="16"></rect>
+                                    <rect x="32" y="288" width="16" height="16"></rect>
+                                    <rect x="32" y="368" width="16" height="16"></rect>
+                                    <rect x="32" y="448" width="16" height="16"></rect>
+                                    <rect x="176" y="360" width="104" height="16"></rect>
+                                    <rect x="296" y="360" width="16" height="16"></rect>
+                                </g>
+                            </g>
+                        </g>
+                    </g>
+                </svg>
+            </div>
+            <p class="nav-mobile__text">Armatura wodociągowa</p>
+        </a>
+        <a class="nav-mobile__items" href="#">
+            <div class="nav-mobile__icon">
+                <svg fill="#1f2d5a" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-51.2 -51.2 614.40 614.40" xml:space="preserve"
+                    stroke="#1f2d5a" stroke-width="0.00512">
+                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                    <g id="SVGRepo_iconCarrier">
+                        <g>
+                            <g>
+                                <path
+                                    d="M422.759,128h-35.063c-9.173,0-16.606,7.427-16.606,16.597v9.123c-43.972,1.237-79.458,12.053-107.161,29.601 c-7.848,4.971-14.704,10.266-20.62,15.709v-62.497h15.933c10.048,0,18.202-8.149,18.202-18.202V86.468 c0-10.053-8.154-18.202-18.202-18.202h-15.933V18.202C243.309,8.149,235.155,0,225.107,0h-100.13 c-10.055,0-18.202,8.147-18.202,18.202v50.065h-15.93c-10.055,0-18.202,8.147-18.202,18.202v31.863 c0,10.055,8.147,18.202,18.202,18.202h15.93v238.933h-15.93c-10.055,0-18.202,8.147-18.202,18.202v31.863 c0,10.055,8.147,18.202,18.202,18.202h15.932v50.065c0,10.055,8.147,18.202,18.202,18.202h100.13 c10.048,0,18.202-8.149,18.202-18.202v-50.065h15.932c10.048,0,18.202-8.149,18.202-18.202v-31.863 c0-10.053-8.154-18.202-18.202-18.202h-15.933v-32.471c1.515-2.769,3.852-6.485,7.069-10.837 c6.245-8.449,14.042-16.792,23.506-24.499c24.88-20.262,56.923-32.87,97.206-34.427v8.837c0,9.17,7.433,16.597,16.606,16.597 h35.063c9.167,0,16.597-7.43,16.597-16.597V144.597C439.356,135.43,431.926,128,422.759,128z M226.244,493.798 c0,0.625-0.51,1.135-1.135,1.135h-100.13c-0.629,0-1.135-0.506-1.135-1.135v-50.065h102.4V493.798z M260.377,393.668v31.863 c0,0.625-0.51,1.135-1.135,1.135h-24.465H115.311H90.845c-0.629,0-1.135-0.506-1.135-1.135v-31.863 c0-0.629,0.506-1.135,1.135-1.135h168.397C259.867,392.533,260.377,393.043,260.377,393.668z M123.842,18.202 c0-0.629,0.506-1.135,1.135-1.135h100.13c0.625,0,1.135,0.51,1.135,1.135v50.065h-102.4V18.202z M89.711,118.332V86.468 c0-0.629,0.506-1.135,1.135-1.135h24.463h119.467h24.467c0.625,0,1.135,0.51,1.135,1.135v31.863c0,0.625-0.51,1.135-1.135,1.135 h-24.45c-0.006,0-0.011-0.001-0.017-0.001H115.309c-0.006,0-0.011,0.001-0.017,0.001H90.845 C90.216,119.467,89.711,118.961,89.711,118.332z M263.106,294.426c-10.621,8.65-19.391,18.033-26.453,27.588 c-4.555,6.163-7.688,11.39-9.527,15.111c-0.581,1.176-0.883,2.47-0.883,3.781v34.56h-102.4V136.533h102.4v85 c0,8.537,11.149,11.784,15.733,4.581c4.781-7.513,14.808-18.064,31.086-28.375c25.011-15.843,57.353-25.736,98.028-26.947v85.359 C326.724,257.741,290.939,271.759,263.106,294.426z M422.29,281.6h-34.133v-16.949c0.001-0.04,0.006-0.078,0.006-0.118v-102.4 c0-0.04-0.005-0.079-0.006-0.118v-16.947h34.133V281.6z">
+                                </path>
+                            </g>
+                        </g>
+                    </g>
+                </svg>
+            </div>
+            <p class="nav-mobile__text">Kształtki kanalizacyjne</p>
+        </a>
+        <a class="nav-mobile__items" href="#">
+            <div class="nav-mobile__icon">
+                <svg fill="#1f2d5a" viewBox="-2.4 -2.4 28.80 28.80" xmlns="http://www.w3.org/2000/svg" stroke="#1f2d5a"
+                    stroke-width="0.00024000000000000003">
+                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                    <g id="SVGRepo_iconCarrier">
+                        <path
+                            d="M7.97,2.242l-5,20A1,1,0,0,1,2,23a1.025,1.025,0,0,1-.244-.03,1,1,0,0,1-.727-1.212l5-20a1,1,0,1,1,1.94.484Zm10-.484a1,1,0,1,0-1.94.484l5,20A1,1,0,0,0,22,23a1.017,1.017,0,0,0,.243-.03,1,1,0,0,0,.728-1.212ZM12,1a1,1,0,0,0-1,1V6a1,1,0,0,0,2,0V2A1,1,0,0,0,12,1Zm0,7.912a1,1,0,0,0-1,1v4.176a1,1,0,1,0,2,0V9.912A1,1,0,0,0,12,8.912ZM12,17a1,1,0,0,0-1,1v4a1,1,0,0,0,2,0V18A1,1,0,0,0,12,17Z">
+                        </path>
+                    </g>
+                </svg>
+            </div>
+            <p class="nav-mobile__text">Żeliwo drogowe</p>
+        </a>
+        <a class="nav-mobile__items" href="#">
+            <div class="nav-mobile__icon">
+                <svg fill="#1f2d5a" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-7 -7 84.00 84.00"
+                    enable-background="new 0 0 70 70" xml:space="preserve" stroke="#1f2d5a" stroke-width="0.0007">
+                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                    <g id="SVGRepo_iconCarrier">
+                        <g>
+                            <path
+                                d="M63.679,9.583h-56c-2.209,0-5.096,0.25-5.096,4.346v42c0,2.209,0.563,3.654,4.096,3.654h57 c2.209,0,2.904-1.445,2.904-3.654v-42C66.583,11.72,65.888,9.583,63.679,9.583z M62.583,13.583v5h-56v-5H62.583z M6.583,55.583v-35 h56v35H6.583z">
+                            </path>
+                            <path
+                                d="M28.988,24.583H13.176c-2.218,0-2.593,1-2.593,3.169v21c0,1.104,0.488,1.831,1.593,1.831h16.813 c1.104,0,1.595,0.273,1.595-0.831v-22C30.583,26.647,31.021,24.583,28.988,24.583z M28.583,48.583h-16v-22h16V48.583z">
+                            </path>
+                            <path
+                                d="M33.417,26.583h12c0.553,0,1-0.447,1-1s-0.447-1-1-1h-12c-0.553,0-1,0.447-1,1S32.864,26.583,33.417,26.583z">
+                            </path>
+                            <path
+                                d="M58.417,24.583h-9c-0.553,0-1,0.447-1,1s0.447,1,1,1h9c0.553,0,1-0.447,1-1S58.97,24.583,58.417,24.583z">
+                            </path>
+                            <path
+                                d="M33.417,31.583h6c0.553,0,1-0.447,1-1s-0.447-1-1-1h-6c-0.553,0-1,0.447-1,1S32.864,31.583,33.417,31.583z">
+                            </path>
+                            <path
+                                d="M14.417,17.583h1c0.553,0,1-0.447,1-1s-0.447-1-1-1h-1c-0.553,0-1,0.447-1,1S13.864,17.583,14.417,17.583z">
+                            </path>
+                            <path
+                                d="M53.417,17.583h1c0.553,0,1-0.447,1-1s-0.447-1-1-1h-1c-0.553,0-1,0.447-1,1S52.864,17.583,53.417,17.583z">
+                            </path>
+                            <path
+                                d="M50.417,29.583h-7c-0.553,0-1,0.447-1,1s0.447,1,1,1h7c0.553,0,1-0.447,1-1S50.97,29.583,50.417,29.583z">
+                            </path>
+                            <path
+                                d="M33.417,36.583h10c0.553,0,1-0.447,1-1s-0.447-1-1-1h-10c-0.553,0-1,0.447-1,1S32.864,36.583,33.417,36.583z">
+                            </path>
+                            <path
+                                d="M46.417,35.583c0,0.553,0.447,1,1,1h7c0.553,0,1-0.447,1-1s-0.447-1-1-1h-7C46.864,34.583,46.417,35.03,46.417,35.583z">
+                            </path>
+                            <path
+                                d="M58.417,29.583h-4c-0.553,0-1,0.447-1,1s0.447,1,1,1h4c0.553,0,1-0.447,1-1S58.97,29.583,58.417,29.583z">
+                            </path>
+                            <path
+                                d="M33.417,44.583h8c0.553,0,1-0.447,1-1s-0.447-1-1-1h-8c-0.553,0-1,0.447-1,1S32.864,44.583,33.417,44.583z">
+                            </path>
+                            <path
+                                d="M58.417,42.583h-13c-0.553,0-1,0.447-1,1s0.447,1,1,1h13c0.553,0,1-0.447,1-1S58.97,42.583,58.417,42.583z">
+                            </path>
+                            <path
+                                d="M48.417,47.583h-15c-0.553,0-1,0.447-1,1s0.447,1,1,1h15c0.553,0,1-0.447,1-1S48.97,47.583,48.417,47.583z">
+                            </path>
+                            <path
+                                d="M58.417,47.583h-6c-0.553,0-1,0.447-1,1s0.447,1,1,1h6c0.553,0,1-0.447,1-1S58.97,47.583,58.417,47.583z">
+                            </path>
+                        </g>
+                    </g>
+                </svg>
+            </div>
+            <p class="nav-mobile__text">O nas</p>
+        </a>
+        <a class="nav-mobile__items" href="#">
+            <div class="nav-mobile__icon">
+                <svg fill="#1f2d5a" viewBox="-6.4 -6.4 76.80 76.80" version="1.1" xml:space="preserve"
+                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" stroke="#1f2d5a"
+                    stroke-width="0.00064">
+                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                    <g id="SVGRepo_iconCarrier">
+                        <g id="_x32_5_attachment"></g>
+                        <g id="_x32_4_office"></g>
+                        <g id="_x32_3_pin"></g>
+                        <g id="_x32_2_business_card"></g>
+                        <g id="_x32_1_form"></g>
+                        <g id="_x32_0_headset"></g>
+                        <g id="_x31_9_video_call"></g>
+                        <g id="_x31_8_letter_box"></g>
+                        <g id="_x31_7_papperplane"></g>
+                        <g id="_x31_6_laptop">
+                            <g>
+                                <path
+                                    d="M62.6738,49.8809c-0.4111-0.584-1.1523-0.9614-1.8877-0.9614H60.061V17.2261c0-1.7427-1.4194-3.1606-3.1641-3.1606 H45.8047v-3.0996c0-2.084-1.6953-3.7798-3.7793-3.7798H20.855c-2.0859,0-3.7832,1.6958-3.7832,3.7798v3.0996H7.103 c-1.7446,0-3.1641,1.418-3.1641,3.1606v31.6934H3.2139c-0.7354,0-1.4766,0.3774-1.8877,0.9614 c-0.3306,0.4688-0.4141,1.0342-0.231,1.5464l1.248,3.5439c0.4312,1.2227,1.144,1.8428,2.1187,1.8428h55.0762 c0.9746,0,1.6875-0.6201,2.1187-1.8433l1.2461-3.5386C63.0879,50.915,63.0044,50.3496,62.6738,49.8809z M20.855,28.2139h2.8022 v4.3169c0,0.5522,0.4478,1,1,1s1-0.4478,1-1v-4.3169h4.7827v7.2412c0,0.5522,0.4478,1,1,1s1-0.4478,1-1v-7.2412h4.9175v4.3169 c0,0.5522,0.4478,1,1,1s1-0.4478,1-1v-4.3169h2.668c2.084,0,3.7793-1.6958,3.7793-3.7798v-3.7085h7.0503v23.6099h-41.71V20.7256 h5.9268v3.7085C17.0718,26.5181,18.769,28.2139,20.855,28.2139z M21.2932,26.2139l7.6743-7.317l1.8152,1.5826 c0.1885,0.1641,0.4229,0.2461,0.6572,0.2461s0.4692-0.082,0.6577-0.2466l2.1458-1.8724l7.9888,7.5863 c-0.0687,0.0081-0.136,0.0209-0.2068,0.0209H21.2932z M43.6921,10.3619c0.0689,0.1894,0.1126,0.391,0.1126,0.6039v13.4683 c0,0.1516-0.0248,0.2963-0.0606,0.4368l-7.9872-7.5848L43.6921,10.3619z M41.9973,9.186l-10.5578,9.2124L20.8729,9.186H41.9973z M19.0718,10.9658c0-0.2112,0.0435-0.4111,0.1114-0.5992l8.2706,7.2106l-8.1309,7.7523c-0.1555-0.2641-0.251-0.5676-0.251-0.8954 V10.9658z M5.939,17.2261c0-0.6401,0.522-1.1606,1.1641-1.1606h9.9688v2.6602H10.145c-0.5522,0-1,0.4478-1,1v25.6099 c0,0.5522,0.4478,1,1,1h43.71c0.5522,0,1-0.4478,1-1V19.7256c0-0.5522-0.4478-1-1-1h-8.0503v-2.6602H56.897 c0.6421,0,1.1641,0.5205,1.1641,1.1606v31.6934H41.3198c-0.2935,0-0.5718,0.145-0.7617,0.3687s-0.2715,0.5356-0.2241,0.8252 c0,0.2563-0.2163,0.4727-0.4727,0.4727H24.1387c-0.2563,0-0.4727-0.2163-0.4717-0.5044c0.0474-0.29-0.0347-0.5859-0.2246-0.8096 s-0.4688-0.3525-0.7622-0.3525H5.939V17.2261z M59.77,54.3062c-0.1406,0.4004-0.2412,0.5015-0.2349,0.5078H4.48 c-0.0361-0.0381-0.1279-0.1602-0.25-0.5073l-1.1768-3.3403c0.0508-0.0259,0.1118-0.0469,0.1606-0.0469h18.5869 c0.335,0.9688,1.2563,1.6665,2.3379,1.6665h15.7227c1.0815,0,2.0029-0.6978,2.3379-1.6665h18.5869 c0.0488,0,0.1099,0.021,0.1606,0.0469L59.77,54.3062z">
+                                </path>
+                            </g>
+                        </g>
+                        <g id="_x31_5_connection"></g>
+                        <g id="_x31_4_phonebook"></g>
+                        <g id="_x31_3_classic_telephone"></g>
+                        <g id="_x31_2_sending_mail"></g>
+                        <g id="_x31_1_man_talking"></g>
+                        <g id="_x31_0_date"></g>
+                        <g id="_x30_9_review"></g>
+                        <g id="_x30_8_email"></g>
+                        <g id="_x30_7_information"></g>
+                        <g id="_x30_6_phone_talking"></g>
+                        <g id="_x30_5_women_talking"></g>
+                        <g id="_x30_4_calling"></g>
+                        <g id="_x30_3_women"></g>
+                        <g id="_x30_2_writing"></g>
+                        <g id="_x30_1_chatting"></g>
+                    </g>
+                </svg>
+            </div>
+            <p class="nav-mobile__text">Kontakt</p>
+        </a>
     </nav>
     <header class="header">
         <div class="header__box">
-            <a href="./index.html"><img src="./img/budo-instal-transparent-logo.png" alt="Logo firmy Budo Instal"
-                    class="header__logo"></a>
+            <a class="header__logo-link" href="./index.html"><img src="./img/budo-instal-transparent-logo.png"
+                    alt="Logo firmy Budo Instal" class="header__logo"></a>
             <nav>
                 <div class="header__nav-desktop">
                     <a class="header__nav-item" href="#">oferta</a>
@@ -44,14 +243,9 @@
         </div>
     </header>
     <main>
-        <div class="header__offer-box">
-            <div class="header__single-offer">
-    
-            </div>
-            <div class="header__single-offer">
-    
-            </div>
-        </div>
+        <section>
+
+        </section>
         <section class="contact-section" id="contact">
             <div class="contact">
                 <div class="contact-container">
