added new icons to mobile menu

--- a/index.html
+++ b/index.html
@@ -106,18 +106,43 @@
         </a>
         <a class="nav-mobile__items" href="#">
             <div class="nav-mobile__icon">
-                <svg fill="#1f2d5a" viewBox="-2.4 -2.4 28.80 28.80" xmlns="http://www.w3.org/2000/svg" stroke="#1f2d5a"
-                    stroke-width="0.00024000000000000003">
+                <svg viewBox="-2.4 -2.4 28.80 28.80" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#1f2d5a"
+                    stroke-width="1.2">
                     <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                     <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
                     <g id="SVGRepo_iconCarrier">
                         <path
-                            d="M7.97,2.242l-5,20A1,1,0,0,1,2,23a1.025,1.025,0,0,1-.244-.03,1,1,0,0,1-.727-1.212l5-20a1,1,0,1,1,1.94.484Zm10-.484a1,1,0,1,0-1.94.484l5,20A1,1,0,0,0,22,23a1.017,1.017,0,0,0,.243-.03,1,1,0,0,0,.728-1.212ZM12,1a1,1,0,0,0-1,1V6a1,1,0,0,0,2,0V2A1,1,0,0,0,12,1Zm0,7.912a1,1,0,0,0-1,1v4.176a1,1,0,1,0,2,0V9.912A1,1,0,0,0,12,8.912ZM12,17a1,1,0,0,0-1,1v4a1,1,0,0,0,2,0V18A1,1,0,0,0,12,17Z">
-                        </path>
+                            d="M8.57385 20.3523L11.9553 13.5894C11.9737 13.5526 12.0263 13.5526 12.0447 13.5894L15.4261 20.3523C15.4483 20.3965 15.3996 20.4426 15.3566 20.4181L12.0248 18.5142C12.0094 18.5054 11.9906 18.5054 11.9752 18.5142L8.64338 20.4181C8.60043 20.4426 8.55173 20.3965 8.57385 20.3523Z"
+                            stroke="#33363F" stroke-linecap="round"></path>
+                        <path d="M20.5 18.5L16.5 3.5" stroke="#33363F" stroke-linecap="round"></path>
+                        <path d="M3.5 18.5L7.5 3.5" stroke="#33363F" stroke-linecap="round"></path>
+                        <path d="M12 10.5V8.5" stroke="#33363F" stroke-linecap="round"></path>
+                        <path d="M12 5.5V3.5" stroke="#33363F" stroke-linecap="round"></path>
                     </g>
                 </svg>
             </div>
             <p class="nav-mobile__text">Żeliwo drogowe</p>
+        </a>
+        <a class="nav-mobile__items" href="#">
+            <div class="nav-mobile__icon">
+                <svg fill="#1f2d5a" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-29.86 -29.86 358.32 358.32"
+                    xml:space="preserve" stroke="#1f2d5a" stroke-width="0.00298602"
+                    transform="rotate(0)matrix(-1, 0, 0, -1, 0, 0)">
+                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                    <g id="SVGRepo_iconCarrier">
+                        <g>
+                            <g>
+                                <path
+                                    d="M245.718,136.198h-1.483V39.829c0-19.556-15.91-35.466-35.466-35.466h-52.343C155.1,1.776,152.41,0,149.302,0 s-5.799,1.776-7.126,4.364H89.833c-19.556,0-35.466,15.91-35.466,35.466v96.368h-1.483c-4.424,0-8.01,3.586-8.01,8.01 s3.586,8.01,8.01,8.01h1.483v3.755c0,6.628,4.001,12.331,9.711,14.843v119.776c0,4.424,3.586,8.01,8.01,8.01h154.427 c4.424,0,8.01-3.586,8.01-8.01V170.816c5.709-2.512,9.711-8.216,9.711-14.843v-3.755h1.483c4.424,0,8.01-3.586,8.01-8.01 S250.141,136.198,245.718,136.198z M70.388,123.892V39.829c0-10.722,8.722-19.446,19.445-19.446h51.458v103.323H72.089 C71.505,123.706,70.936,123.772,70.388,123.892z M218.504,282.582H80.099v-0.001V172.188h138.406V282.582z M218.504,156.168 H80.099v-16.442h138.406V156.168z M228.215,123.892c-0.548-0.118-1.117-0.185-1.701-0.185h-69.203V20.384h51.458 c10.723,0,19.446,8.724,19.446,19.446V123.892z">
+                                </path>
+                            </g>
+                        </g>
+                    </g>
+                </svg>
+            </div>
+            <p class="nav-mobile__text">Studnie</p>
         </a>
         <a class="nav-mobile__items" href="#">
             <div class="nav-mobile__icon">
