added year information in the footer

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                     <a class="legal-link" href="#">Informacje o plikach</a>
                 </div>
                 <div class="copyright">
-                    <p class="legal-link">© 2023 Budo-Instal 2 Sławomir Czyżewski</p>
+                    <p class="legal-link">Copyright © <span class="footer_year"></span> Budo-Instal 2 Sławomir Czyżewski</p>
                 </div>
             </div>
         </div>
