added new sliders to slider section on the main page with the descriptions

--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
             <div class="slider">
                 <div class="slider__slide-box slider__slide-box--active" id="slide1">
                     <div class="slider__text-box slider__text-box--slide1">
-                        <h1>Specjalistyczna sprzedaż hurtowa</h1>
-                        <p class="slider__description">text1</p>
+                        <h1 class="slider__headers">Specjalistyczna sprzedaż hurtowa</h1>
+                        <p class="slider__description">Materiały do budowy systemu sieci wodociągowej i systemu kanalizacji.</p>
                         <a href="#" class="slider__btn">O nas</a>
                     </div>
                     <img class="slider__img" src="https://static8.depositphotos.com/1006045/828/i/600/depositphotos_8283178-stock-photo-pvc-pipes.jpg"
@@ -289,8 +289,8 @@
                 </div>
                 <div class="slider__slide-box" id="slide2">
                     <div class="slider__text-box slider__text-box--slide2">
-                        <h2>Systemy rur</h2>
-                        <p class="slider__description">text1</p>
+                        <h2 class="slider__headers">Systemy rur</h2>
+                        <p class="slider__description">System rur do budowy sieci wody pitnej, kanalizacji sanitarnej i deszczowej, a także systemu drenażu.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
                     <img class="slider__img" src="https://static8.depositphotos.com/1006045/828/i/600/depositphotos_8283178-stock-photo-pvc-pipes.jpg"
@@ -298,17 +298,26 @@
                 </div>
                 <div class="slider__slide-box" id="slide3">
                     <div class="slider__text-box slider__text-box--slide3">
-                        <h2>System rur</h2>
-                        <p class="slider__description">text1</p>
+                        <h2 class="slider__headers">Kształtki i armatura wodociągowa</h2>
+                        <p class="slider__description">Oferta produktów hydraulicznych służących do budowy nowych instalacji oraz modernizacji istniejących systemów.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
                     <img class="slider__img" src="https://static8.depositphotos.com/1006045/828/i/600/depositphotos_8283178-stock-photo-pvc-pipes.jpg"
                         alt="Slide 3">
                 </div>
                 <div class="slider__slide-box" id="slide4">
-                    <div class="slider__text-box slider__text-box--slide3">
-                        <h2>Studie</h2>
-                        <p class="slider__description">text1</p>
+                    <div class="slider__text-box slider__text-box--slide4">
+                        <h2 class="slider__headers">Kształtki PVC kanalizacji zewnętrznej</h2>
+                        <p class="slider__description">Szeroki asortyment elementów systemu do montażu sieci kanalizacyjnej.</p>
+                        <a href="#" class="slider__btn">Dowiedz się więcej</a>
+                    </div>
+                    <img class="slider__img" src="https://static8.depositphotos.com/1006045/828/i/600/depositphotos_8283178-stock-photo-pvc-pipes.jpg"
+                        alt="Slide 4">
+                </div>
+                <div class="slider__slide-box" id="slide5">
+                    <div class="slider__text-box slider__text-box--slide5">
+                        <h2 class="slider__headers">Żeliwo drogowe</h2>
+                        <p class="slider__description">Oferta asortymentu infrastruktury drogowej z żeliwa, czyli włazy, wpusty czy skrzynki uliczne.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
                     <img class="slider__img" src="https://static8.depositphotos.com/1006045/828/i/600/depositphotos_8283178-stock-photo-pvc-pipes.jpg"
