Checking main banner onsite

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                         <p class="slider__description">Materiały do budowy systemu sieci wodociągowej i systemu kanalizacji.</p>
                         <a href="#" class="slider__btn">O nas</a>
                     </div>
-                    <img class="slider__img" src="https://static8.depositphotos.com/1006045/828/i/600/depositphotos_8283178-stock-photo-pvc-pipes.jpg"
+                    <img class="slider__img" src="./img/linda-xu-UGQpaq08Igw-unsplash.webp"
                         alt="Slide 1">
                 </div>
                 <div class="slider__slide-box" id="slide2">
@@ -293,7 +293,7 @@
                         <p class="slider__description">System rur do budowy sieci wody pitnej, kanalizacji sanitarnej i deszczowej, a także systemu drenażu.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img class="slider__img" src="https://static8.depositphotos.com/1006045/828/i/600/depositphotos_8283178-stock-photo-pvc-pipes.jpg"
+                    <img class="slider__img" src="./img/Zrzut ekranu 2024-05-11 o 21.50.16.png"
                         alt="Slide 2">
                 </div>
                 <div class="slider__slide-box" id="slide3">
