Checking main banner onsite

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                         <p class="slider__description">Materiały do budowy systemu sieci wodociągowej i systemu kanalizacji.</p>
                         <a href="#" class="slider__btn">O nas</a>
                     </div>
-                    <img class="slider__img" src="./img/linda-xu-UGQpaq08Igw-unsplash.webp"
+                    <img class="slider__img" src="./img/jason-leung-0gZ1JLxqdus-unsplash.jpg"
                         alt="Slide 1">
                 </div>
                 <div class="slider__slide-box" id="slide2">
@@ -293,7 +293,7 @@
                         <p class="slider__description">System rur do budowy sieci wody pitnej, kanalizacji sanitarnej i deszczowej, a także systemu drenażu.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img class="slider__img" src="./img/Zrzut ekranu 2024-05-11 o 21.50.16.png"
+                    <img class="slider__img" src="./img/jason-leung-nOz9mDukDF8-unsplash.jpg"
                         alt="Slide 2">
                 </div>
                 <div class="slider__slide-box" id="slide3">
@@ -302,7 +302,7 @@
                         <p class="slider__description">Oferta produktów hydraulicznych służących do budowy nowych instalacji oraz modernizacji istniejących systemów.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img class="slider__img" src="https://static8.depositphotos.com/1006045/828/i/600/depositphotos_8283178-stock-photo-pvc-pipes.jpg"
+                    <img class="slider__img" src="./img/cristian-palmer-3leBubkp5hk-unsplash.jpg"
                         alt="Slide 3">
                 </div>
                 <div class="slider__slide-box" id="slide4">
@@ -311,7 +311,7 @@
                         <p class="slider__description">Szeroki asortyment elementów systemu do montażu sieci kanalizacyjnej.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img class="slider__img" src="https://static8.depositphotos.com/1006045/828/i/600/depositphotos_8283178-stock-photo-pvc-pipes.jpg"
+                    <img class="slider__img" src="./img/conor-sexton-hRemch0ZDwI-unsplash.jpg"
                         alt="Slide 4">
                 </div>
                 <div class="slider__slide-box" id="slide5">
@@ -320,7 +320,7 @@
                         <p class="slider__description">Oferta asortymentu infrastruktury drogowej z żeliwa, czyli włazy, wpusty czy skrzynki uliczne.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img class="slider__img" src="https://static8.depositphotos.com/1006045/828/i/600/depositphotos_8283178-stock-photo-pvc-pipes.jpg"
+                    <img class="slider__img" src="./img/linda-xu-UGQpaq08Igw-unsplash.webp"
                         alt="Slide 4">
                 </div>
                 <i class="arrow arrow--prevBtn fa-solid fa-arrow-left" id="prevBtn"></i>
