Linked proper JS script

--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
         }
     </script>
     <script src="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@3.0.1/dist/cookieconsent.umd.js"></script>
-    <script src="./js/test.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
