Added about us section

--- a/index.html
+++ b/index.html
@@ -334,6 +334,12 @@
                 <i class="arrow arrow--nextBtn fa-solid fa-arrow-right" id="nextBtn"></i>
             </div>
         </section>
+        <section class="container">
+            <div class="about">
+                <h3 class="headers-titles">Możesz na nas liczyć</h3>
+                <p class="about__description">Możesz polegać na naszym doświadczonym zespole, który zawsze służy fachowym doradztwem. Nasze usługi obejmują kompleksową pomoc w doborze odpowiedniego systemu oraz dostosowaniu go do indywidualnych warunków budowlanych, eksploatacyjnych oraz wymagań prawnych.</p>
+            </div>
+        </section>
         <section class="section">
             <div class="container">
                 <div class="brand-slider">
