--- a/index.html
+++ b/index.html
@@ -350,10 +350,10 @@
                     <div class="brand-slider__box">
                         <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/bohamet-logo.png"
                                 alt="Logo producenta Bohamet"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/pipelife-logo.svg"
+                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./icons/pipelife-logo.svg"
                                 alt="Logo producenta Pipe Life"></div>
                         <div class="brand-slider__brand"><img class="brand-slider__logo"
-                                src="./img/instalplast-logo.png" alt="Logo producenta Instalplast Łask"></div>
+                                src="./icons/instalplast-logo.svg" alt="Logo producenta Instalplast Łask"></div>
                         <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/zinplast-logo.png"
                                 alt="Logo producenta Zinplast Wolbrom"></div>
                         <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/plastimex_logo.png"
@@ -374,28 +374,6 @@
                                 alt="Logo producenta Aeon Szamotuły"></div>
                         <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/bohamet-logo.png"
                                 alt="Logo producenta Bohamet"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/pipelife-logo.svg"
-                                alt="Logo producenta Pipe Life"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo"
-                                src="./img/instalplast-logo.png" alt="Logo producenta Instalplast Łask"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/zinplast-logo.png"
-                                alt="Logo producenta Zinplast Wolbrom"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/plastimex_logo.png"
-                                alt="Logo producenta Plastimex Psary"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/domex-logo.png"
-                                alt="Logo producenta Domex"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/norson-logo.png"
-                                alt="Logo producenta Norson"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/lmb-logo.png"
-                                alt="Logo producenta Lefek Miler Banasik"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/meier-logo.png"
-                                alt="Logo producenta Meier Stąporków"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/fansuld-logo.png"
-                                alt="Logo producenta Fansuld Końskie"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo"
-                                src="./img/profil-pila-logo.png" alt="Logo producenta Profil Piła"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/Aeon-logo.jpeg"
-                                alt="Logo producenta Aeon Szamotuły"></div>
                     </div>
                     <div class="brand-slider__btn-box">
                         <button class="brand-slider__btn">Dowiedz się więcej</button>
@@ -772,7 +750,7 @@
         }
     </script>
     <script src="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@3.0.1/dist/cookieconsent.umd.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="./js/script."></script>
 </body>
 
 </html>
