--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
         }
     </script>
     <script src="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@3.0.1/dist/cookieconsent.umd.js"></script>
-    <script src="./js/script."></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
